# tcrm-monitor

./: CHANGELOG.md  Cargo.toml  README.md
benches/: flatbuffers_conversion_benchmarks.rs  simple_dependency_benchmarks.rs  task_execution_benchmarks.rs
examples/: basic_chain.rs  error_handling.rs  flatbuffers_conversion.rs  flatbuffers_workflow.rs  task_monitor_control.rs
src/: lib.rs
src/flatbuffers/: mod.rs  tcrm_monitor.fbs  tcrm_monitor_generated.rs
src/flatbuffers/conversion/: config.rs  error.rs  event.rs  mod.rs
src/flatbuffers/tests/: integration_tests.rs  mod.rs  prop_tests.rs  stress_tests.rs
src/monitor/: config.rs  depend.rs  error.rs  event.rs  mod.rs  tasks.rs
src/monitor/executor/: direct.rs  mod.rs
src/monitor/executor/tests/: direct.rs
src/monitor/tests/: mod.rs
src/monitor/tests/config/: dependencies.rs  independent.rs  mod.rs
src/monitor/tests/depend/: build_depend_map.rs  check_circular_dependencies.rs  mod.rs
tests/: event_system_integration.rs
