[package]
name = "tcrm-monitor"
version = "0.1.5"
edition = "2024"
description = "Task dependency management and execution library with parallel processing, real-time monitoring, and runtime control"
repository = "https://github.com/xpcn2015/tcrm-monitor"
homepage = "https://github.com/xpcn2015/tcrm-monitor"
documentation = "https://docs.rs/tcrm-monitor"
keywords = ["task", "execution", "parallel", "async"]
categories = ["asynchronous", "development-tools", "concurrency"]
license = "MIT OR Apache-2.0"
readme = "README.md"
exclude = [".vscode/*"]

[dependencies]
tcrm-task = { version = "0.3", features = [] }
thiserror = "2.0"
tokio = { version = "1.47", features = [
    "rt-multi-thread",
    "time",
    "macros",
    "io-util",
    "process",
    "sync",
    "signal",
] }
serde = { version = "1.0", features = ["derive"], optional = true }
flatbuffers = { version = "25.2", optional = true }
tracing = { version = "0.1", optional = true }

[dev-dependencies]
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
criterion = { version = "0.7", features = ["html_reports"] }
proptest = "1.4"
pretty_assertions = "1.4"
temp-dir = "0.1"
rstest = "0.26"
futures = "0.3"

[features]
default = []
flatbuffers = ["dep:flatbuffers", "tcrm-task/flatbuffers"]
serde = ["dep:serde", "tcrm-task/serde"]
tracing = ["dep:tracing", "tcrm-task/tracing"]
tracing-release_max_level_off = [
    "tracing/release_max_level_off",
    "tcrm-task/tracing-release_max_level_off",
]
tracing-release_max_level_error = [
    "tracing/release_max_level_error",
    "tcrm-task/tracing-release_max_level_error",
]
tracing-release_max_level_warn = [
    "tracing/release_max_level_warn",
    "tcrm-task/tracing-release_max_level_warn",
]
tracing-release_max_level_info = [
    "tracing/release_max_level_info",
    "tcrm-task/tracing-release_max_level_info",
]
tracing-release_max_level_debug = [
    "tracing/release_max_level_debug",
    "tcrm-task/tracing-release_max_level_debug",
]
tracing-release_max_level_trace = [
    "tracing/release_max_level_trace",
    "tcrm-task/tracing-release_max_level_trace",
]
tracing-max_level_off = [
    "tracing/max_level_off",
    "tcrm-task/tracing-max_level_off",
]
tracing-max_level_error = [
    "tracing/max_level_error",
    "tcrm-task/tracing-max_level_error",
]
tracing-max_level_warn = [
    "tracing/max_level_warn",
    "tcrm-task/tracing-max_level_warn",
]
tracing-max_level_info = [
    "tracing/max_level_info",
    "tcrm-task/tracing-max_level_info",
]
tracing-max_level_debug = [
    "tracing/max_level_debug",
    "tcrm-task/tracing-max_level_debug",
]
tracing-max_level_trace = [
    "tracing/max_level_trace",
    "tcrm-task/tracing-max_level_trace",
]

[[example]]
name = "flatbuffers_conversion"
required-features = ["flatbuffers"]

[[example]]
name = "flatbuffers_workflow"
required-features = ["flatbuffers"]

[[bench]]
name = "flatbuffers_conversion_benchmarks"
harness = false
required-features = ["flatbuffers"]

[[bench]]
name = "simple_dependency_benchmarks"
harness = false

[[bench]]
name = "task_execution_benchmarks"
harness = false
